[project]
name = "mtto"
version = "0.1.0"
description = "Maglev Train Trajectory Optimization based on Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium[other]>=1.2.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "setuptools<81",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
